tests/src/frontend/typechecking/invalid/conditional_trait_tparam_constraint_merged.sk
trait X<+T>
class Foo<+T, +U, +V>() uses X<T>, X<U>[T: U], X<V>[T: V]
